Fix: Correct latency audit thresholds against Kafka 3.8 + CP 8.x documentation
- num.network.threads default is 3 (not 8) — flag and fix-text updated
- num.io.threads default is 8; threshold now flags < vCPU count, not < 8
- Add num.replica.fetchers check (Kafka default=1; CDC needs ≥4)
- Add vm.dirty_ratio check (Confluent recommended: dirty_ratio=80, bg=5)
- JVM heap >6 GB flag now exempts connect node (Connect heap is 0.5-8 GB,
  sized by connector count, not the broker page-cache rule)
- GC fix-text updated for CP 8.x / Java 21: ZGC Generational preferred
  with Confluent-tested G1GC flags (-XX:MaxGCPauseMillis=20, etc.)
- Socket buffer fix-text corrected: OS ceiling should be 16 MB
  (net.core.rmem_max=16777216, per Netflix EC2 Kafka tuning guide),
  not 4 MB; broker .env value stays at 1 MB per .env.template
- min.insync.replicas default documented as 1 (Kafka default)
- FINDINGS.md drift table gains dirty_ratio and replica.fetchers rows
- All fix descriptions cite source (Kafka 3.8 defaults, CP system
  requirements, Netflix/Brendan Gregg EC2 guide, Confluent perf blog)